--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,6 @@ button:focus-visible {
 
 .app-wrapper {
   height: 100vh;
-  width: 100vw;
-  padding: 25px 25px;
+
+  /* padding: 25px 25px; */
 }
